@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-08T08:13:32Z",
-  "count_outdated" : 215,
-  "uniques_outdated" : 186,
+  "timestamp" : "2023-11-09T08:13:38Z",
+  "count_outdated" : 216,
+  "uniques_outdated" : 187,
   "count" : 223,
   "uniques" : 194,
   "clones" : [
-    {
-      "timestamp": "2023-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-30T00:00:00Z",
       "count": 1,
