@@ -1,3 +1,12 @@
+2023-11-09T08:13:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6809069985 # 1327
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-09
+* notice: last 14d: unq all: 3 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 186 215 / 194 223
+* notice: next accum: outdated-unq outdated-all / unq all: 187 216 / 194 223
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-26] / []
+
 2023-11-08T08:13:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6795457432 # 1324
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-08
